--- a/Structural DPs/Decorator-DP/build.gradle
+++ b/Structural DPs/Decorator-DP/build.gradle
@@ -13,4 +13,5 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile files('lib/commons-lang3-3.7.jar', 'lib/commons-text-1.2.jar')
 }
